# belady-cpp

./: CMakeLists.txt  README.md
include/: belady.hpp
test/: CMakeLists.txt  test.sh  testgen.py
test/src/: main.cc
